--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "langfuse>=3.2.1",
+    "pydantic-ai>=0.4.7",
+    "pydantic-ai-slim[tavily]>=0.4.7",
+    "python-dotenv>=1.1.1",
+]
