--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,5 @@ dependencies = [
     "pydantic-ai-slim[a2a,tavily]>=0.4.7",
     "python-dotenv>=1.1.1",
     "logfire[httpx]>=4.0.0",
+    "a2a-sdk>=0.3.0",
 ]
